Changed readme file Added tailwind css Made the layout and sidebar

--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "electron-vite-react",
-  "productName": "Electron",
+  "name": "music-dhoom",
+  "productName": "Music Dhoom",
   "private": true,
-  "version": "2.0.0",
-  "description": "Vite React Electron boilerplate.",
-  "author": "草鞋没号 <308487730@qq.com>",
+  "version": "0.0.1",
+  "description": "Music player made in electron and react",
+  "author": "Jay prakash pathak",
   "license": "MIT",
   "main": "dist/electron/main/index.js",
   "scripts": {
@@ -21,11 +21,15 @@
     "@types/react": "^18.0.12",
     "@types/react-dom": "^18.0.5",
     "@vitejs/plugin-react": "^1.3.2",
+    "autoprefixer": "^10.4.7",
     "electron": "^19.0.3",
     "electron-builder": "^23.0.3",
+    "postcss": "^8.4.14",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
+    "react-icons": "^4.4.0",
     "sass": "^1.52.2",
+    "tailwindcss": "^3.1.4",
     "typescript": "^4.7.3",
     "vite": "^2.9.10",
     "vite-plugin-electron": "^0.6.0"
