--- a/package.json
+++ b/package.json
@@ -15,7 +15,11 @@
     "node": ">=14.17.0"
   },
   "dependencies": {
-    "electron-store": "^8.0.1"
+    "@types/react-router-dom": "^5.3.3",
+    "electron-store": "^8.0.1",
+    "react-router-dom": "5.2.1",
+    "sqlite3": "^5.0.8",
+    "zustand": "^4.0.0-rc.1"
   },
   "devDependencies": {
     "@types/react": "^18.0.12",
